# crop_vid

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  media.cxx  media.hxx
